@@ -1,3 +1,8 @@
+JO-2007-04-20-0: Bugfix:      Pivot for ARCo Accounting Queries does not show all the fields
+                 Bugster:     6546370
+                 Issue:       2230
+                 Review:      EB
+
 JO-2007-03-14-1: Bugfix:      DBwriter should not use AutoCommit mode
                  Bugster:     6506690
                  Issue:       2139
